# tgfs-app

./: README.md  metadata.json  settings.gradle.kts
TGFS-main/: .gitignore  README.md  bot.py  config.py  database.py  encryption.py  main.py  pyproject.toml  storage.py
app/: build.gradle.kts
app/src/androidTest/java/com/zomurb/tgfs/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt  ReceiveShareActivity.kt
app/src/main/java/com/example/data/file/: FileChunker.kt
app/src/main/java/com/example/data/local/: DatabaseSyncManager.kt  Entities.kt  TgfDao.kt  TgfDatabase.kt
app/src/main/java/com/example/data/repository/: TgfRepositoryImpl.kt
app/src/main/java/com/example/data/telegram/: TelegramClientImpl.kt
app/src/main/java/com/example/data/worker/: UploadWorker.kt
app/src/main/java/com/example/domain/model/: Models.kt
app/src/main/java/com/example/domain/repository/: TelegramClient.kt  TgfRepository.kt
app/src/main/java/com/example/presentation/: TgfViewModel.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/zomurb/tgfs/: MainActivity.kt  ReceiveShareActivity.kt
app/src/main/java/com/zomurb/tgfs/presentation/: TgfViewModel.kt
app/src/main/res/drawable/: app_logo_vector.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zomurb/tgfs/: ExampleRobolectricTest.kt  ExampleUnitTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
(+14 files in other folders)
